--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
   text-align: center;
 }
 
+body{
+  background-image: url(./components/event1.jpg);
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
